--- a/nosotros.html
+++ b/nosotros.html
@@ -1,13 +1,3 @@
-<!--
-    Nombres de los participantes
-
-    Edinson Acevedo
-    Juan Manuel Giraldo Ortiz
-    Karen Lorena Estupiñan Sánchez
-    Jesus Bastidas
-    Ronald Hernandez
--->
-
 <!DOCTYPE html>
 <html lang="es">
 
@@ -15,95 +5,50 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="shortcut icon" href="https://noviasdiez.com/tem/favicon.ico" type="image/x-icon">
     <title>Python eye</title>
-    <style>
-        * {
-            border: 0;
-            padding: 0;
-            margin: 0;
-        }
-        @import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-        body {
-            background-color: black;
-            color: white;
-            min-width: 300px;
-            text-align: center;
-            font-family: 'Roboto', montserrat;
-        }
-        header {
-            padding-top: 30px;
-            width: 100%;
-        }
-        header div img {
-            max-width: 300px;
-        }
-        header div p {
-            font-size: 14px;
-            font-style: italic;
-            font-weight: 200;
-            margin-top: -25px;
-        }
-        h1 {
-            margin-top: 80px;
-            margin-bottom: 40px;
-            font-weight: 400;
-        }
-        .inte {
-            display: inline-block;
-            max-width: 350px;
-            padding: 40px 40px;
-            vertical-align: top;
-        }
-        .inte img, .inte p, .inte p span {
-            display: block;
-        }
-        .inte img {
-            border-radius: 50%;
-            max-width: 175px;
-        }
-        .inte p {
-            padding: 5px;
-            padding-top: 20px;
-            font-weight: 200;
-            font-size: 18px;
-        }
-        .inte p span {
-            margin: 10px auto;
-            text-transform: uppercase;
-        }
-        h2 {
-            padding: 30px 30px;
-            padding-bottom: 70px;
-            font-style: italic;
-            font-size: 30px;
-            font-weight: 400;
-        }
-        h2 span {
-            font-size: 20px;
-            font-weight: 600;
-        }
-        footer {
-            background-color: white;
-            padding: 25px;
-        }
-        footer img {
-            max-width: 150px;
-            margin: 0 15px;
-            vertical-align: middle;
-        }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&family=Poppins:ital,wght@0,200;0,300;0,400;0,500;0,600;1,200;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <header>
-        <div>
-            <img src="https://noviasdiez.com/tem/logo_blanco_grupo_1_sin_fondo.png" alt="Python eye" title="Python eye">
-            <p>¡Una pitón hembra!</p>
+        <div class="menu">
+            <img class="alinear" src="img/logo.png" alt="Logo" title="Logo">
+            <nav class="alinear">
+                <ul>
+                    <li class="alinear margeniz">
+                        <a href="/">Inicio</a>
+                    </li>
+                    <li class="alinear">
+                        <a href="nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="alinear">
+                        <button id="login">Iniciar sesión</button>
+                    </li>
+                    <li class="alinear">
+                        <button id="crearcta">Crear cuenta</button>
+                    </li>
+                </ul>
+            </nav>
         </div>
-        <h1>EQUIPO DE DESAROLLO</h1>
+        <div class="bgModal" id="inisesion">
+            <div class="mainModal">
+                <span class="cerrar">X</span><br>
+                <form>
+                    <h3>Inicia Sesión</h3>
+                    <input type="text" name="usuario" required placeholder="Usuario">
+                    <input type="password" name="contraseña" required placeholder="Contraseña">
+                    <button type="submit">Iniciar</button>
+                    <button class="miniBoton" id="recucontra">Olvide mi contraseña</button>
+                    <button class="miniBoton" id="pascrear">Crear cuenta</button>
+                </form>
+            </div>
+        </div>
     </header>
-    <article>
+    <article class="nosotros">
         <div class="inte">
             <img src="https://noviasdiez.com/tem/edi.png" alt="Edinson Acevedo" title="Edinson Acevedo">
             <p>
@@ -116,13 +61,6 @@
             <p>
                 <span><b><b>Frontend</b></b></span>
                 Juan Giraldo
-            </p>
-        </div>
-        <div class="inte">
-            <img src="https://noviasdiez.com/tem/karen.png" alt="Karen Estupiñan" title="Karen Estupiñan">
-            <p>
-                <span><b>The Python</b></span>
-                Karen Estupiñan
             </p>
         </div>
         <div class="inte">
@@ -143,9 +81,12 @@
             "Innovation distinguishes between a leader and a follower."<br><span>Steve Jobs</span>
         </h2>
     </article>
-    <footer>
-        <img src="http://www.utp.edu.co/cms-utp/data/bin/UTP/web/uploads/media/comunicaciones/img/Logo-MisionTIC-2022.jpg" alt="Mision TIC 2022" title="Mision TIC 2022">
-        <img src="https://www.unab.edu.co/sites/default/files/1-LOGO-WEB_0.png" alt="unab" title="unab">
+    <footer class="cajas">
+        <div class="contenedor">
+            <img src="https://www.utp.edu.co/cms-utp/data/bin/UTP/web/uploads/media/comunicaciones/img/Logo-MisionTIC-2022.jpg" alt="Mision TIC 2022" title="Mision TIC 2022">
+            <img class="logopyeye" src="img/logo_negro_grupo_1_sin_fondo.png" alt="" title="">
+            <img src="https://www.unab.edu.co/sites/default/files/1-LOGO-WEB_0.png" alt="unab" title="unab">
+        </div>
     </footer>
 </body>
 
