--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     <article>
             <div class="contenedor">
                 <h3 id="h3">Calculadora de IMC</h3>
-                <form action="">
+                <form>
                     <ul>
                         <li>
                             <div class="circulos">1</div>
@@ -111,6 +111,7 @@
                     </ul>
                 </form>
             </div>
+            <div class="resultado"></div>
     </article>
     <footer class="cajas">
         <div class="contenedor">
