--- a/index.html
+++ b/index.html
@@ -17,8 +17,16 @@
     <header>
         <div class="menu">
             <img class="alinear" src="img/logo.png" alt="Logo" title="Logo">
+            <a class="icomenu">
+                <svg class="icomenu" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);"><path d="M4 6h16v2H4zm0 5h16v2H4zm0 5h16v2H4z"></path></svg>
+            </a>
             <nav class="alinear">
                 <ul>
+                    <li class="alinear">
+                        <a class="icomenu">
+                            <svg class="icomenu" xmlns="http://www.w3.org/2000/svg" width="50" height="50" viewBox="0 0 24 24" style="fill: rgba(0, 0, 0, 1);"><path d="m16.192 6.344-4.243 4.242-4.242-4.242-1.414 1.414L10.535 12l-4.242 4.242 1.414 1.414 4.242-4.242 4.243 4.242 1.414-1.414L13.364 12l4.242-4.242z"></path></svg>
+                        </a>
+                    </li>
                     <li class="alinear margeniz">
                         <a href="/">Inicio</a>
                     </li>
@@ -66,7 +74,7 @@
                 <img class="flotante" src="img/gorditos.png" alt="" title="">
                 <h1>¿Ya tienes tu IMC?</h1>
                 <h2>¡Tu índice de masa corporal adecuado!</h2>
-                <a href="#h3">Calculadora de IMC</a>
+                <a>Calculadora de IMC</a>
             </div>
         </div>
     </header>
@@ -107,6 +115,7 @@
                             <input type="number" id="pesas" name="cuanto_pesas" required placeholder="69">
                             <label for="pesas">kg</label>
                         </li>
+                        <p class="validacion">Todos los campos son obligatorios</p>
                         <button id="Calcular">Calcular</button>
                     </ul>
                 </form>
