--- a/index.html
+++ b/index.html
@@ -130,6 +130,11 @@
         </div>
     </footer>
     <script src="js/js.js"></script>
+    <script>
+        mover();
+        repetirgenero();
+        botonenviar();
+    </script>
 </body>
 
 </html>
